# VehicleCompSim

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeListsClient.txt  CMakeUserPresets.json  ConsoleApplication5.sln  ConsoleApplication51.cpp  Diagram_libery_comunicatin.drawio  Dockerfile  FetchDependencies.cmake  MakeCollage.cpp  MakeCollage.h  Open_cv.h  README.md  SHA-256.cpp  SHA-256.h  funcs.cpp  gitignore.txt  laneDetction.h  laneDetection.cpp  lane_departure.cpp  lane_departure.h  lane_detection.sln  lane_detection.vcxproj  main.cpp  main_curved_road.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popupdialog.cpp  popupdialog.h  popupdialog.ui  test.hpp  toolchain.cmake  yolov3.cpp  yolov3.h
CMakeProjectOPENCV/OPENCV_PROJECT/: CMakeLists.txt
CMakeProjectOPENCV/OPENCV_PROJECT/include/: ApproachDangerZone.h  Distance.h  Manager.h  NewPrediction.h  Poligon.h  Prediction.h  Visualization.h  constants.h  runLaneDetection.h  tracking.h  util.h  yolov3.h
CMakeProjectOPENCV/OPENCV_PROJECT/src/: ApproachDangerZone.cpp  Distance.cpp  (+11 more)
Communication/: .gitignore  CMakeLists.txt  Diagram_libery_comunicatin.drawio
Communication/User_Directory/: .gitignore  CMakeLists.txt  client_main.cpp
Communication/client/: CMakeLists.txt
Communication/test_files/: CMakeLists.txt  client_main.cpp  server_main.cpp
Communication/tests/: main.cpp  test_client.h
Communication/user_files/: CMakeLists.txt  client_main.cpp  serverendclient.cpp
Communication/utilities/: canbus.cpp  canbus.h  constants.h  data_manipulator.cpp  data_manipulator.h  helpers.h  socket.cpp  socket.h  socket_cross_platform.cpp  socket_cross_platform.h
GUI/: CMakeLists.txt
GUI/lib/: Network.cpp  Network.hpp
GUI/resources/: CMakeLists.txt
GUI/src/: CMakeLists.txt  main.cpp
GUI/tests/: CMakeLists.txt  test_DB_handler.cpp  test_parser.cpp  test_saveAndLoad.cpp
HSM/: CMakeLists.txt  Dockerfile  Doxyfile  docker-compose.yml
HSM/AES/: CMakeLists.txt
HSM/API/: CMakeLists.txt
HSM/Benchmark/: CMakeLists.txt  aes_bench.cpp
HSM/BigNum/: CMakeLists.txt  Doxyfile
HSM/HSM_Enums/: CMakeLists.txt  HSMEnums.hpp
HSM/HsmStatus/: CMakeLists.txt  HSMStatusEnum.hpp
HSM/KeyStorage/: CMakeLists.txt
HSM/RPC/: .gitignore  CMakeLists.txt  README.md  RPC_test.cpp  hsm.proto  hsm_grpc_client.cc  hsm_grpc_client.cpp  hsm_grpc_client.hpp  hsm_grpc_server.cc  hsm_grpc_server.cpp  hsm_grpc_server.hpp  hsm_grpc_server_main.cpp
HSM/RSA/: CMakeLists.txt
HSM/SHA-256/: CMakeLists.txt
HSM/SHA256/: CMakeLists.txt
HSM/SHA_API/: CMakeLists.txt
HSM/Signature/: CMakeLists.txt
HSM/Status/: CMakeLists.txt  StatusEnum.hpp
HSM/include/: HSM.h  HSM_status_enum.hpp  HSM_type_enum.hpp
HSM/src/: FileAccess.cpp  HSM.cpp  ID.cpp  KeyStorage.cpp  KyeforKek.hpp
HSM/test/: API_test.cpp
ImageProccesing/CMakeProjectOPENCV/: .gitignore  CMakeLists.txt  main.cpp
ImageProccesing/OPENCV_PROJECT/: CMakeLists.txt
MainComputer/: CMakeLists.txt  README.md
MainComputer/include/: Action.h  AndCondition.h  BinaryTreeBuilder.h  CMakeLists.txt  Communication.h  CompositeCondition.h  ConditionBase.h  ConditionsFactory.h  ContainsCondition.h  ControllersManager.h  EndsWithCondition.h  EqualsToCondition.h  GreaterThanCondition.h  Gui.h  JsonLoader.h  MainComputer.h  OrCondition.h  SensorsManager.h  SimpleCondition.h  SmallerThanCondition.h  StartsWithCondition.h  conditionsManager.h  constants.h
MainComputer/resources/: json.hpp
MainComputer/src/: Action.cpp  AndCondition.cpp  BinaryTreeBuilder.cpp  CMakeLists.txt  Communication.cpp  CompositeCondition.cpp  ConditionsFactory.cpp  ConditionsManager.cpp  ContainsCondition.cpp  ControllersManager.cpp  EndsWithCondition.cpp  EqualsToCondition.cpp  GreaterThanCondition.cpp  Gui.cpp  JsonLoader.cpp  OrCondition.cpp  SensorsManager.cpp  SimpleCondition.cpp  SmallerThanCondition.cpp  StartsWithCondition.cpp  conditionsManager.cpp  main.cpp  maincomputer.cpp  maincomputer.h
MainComputer/tests/: CMakeLists.txt  Tests.cpp  test_and_condition.cpp  test_validation_and_condition.cpp
aes/: CMakeLists.txt  aes.cpp  aes.hpp  aes_consts.hpp  aes_impl.hpp  aes_text_encrypt.cpp  aes_text_encrypt.hpp  test.cpp
benchmark/: CMakeLists.txt  README.md  aes_bench.cpp  bigNum_bench.cpp
demo/: CMakeLists.txt  main.cpp  vehicle_components_id_config.h
demo/breaks/: CMakeLists.txt
demo/gas/: main.cpp
demo/sensors/: vehicle_components_id_config.h
demo/wheels/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/client/: AddItemHandler.cpp  AddItemHandler.h  CMakeLists.txt  DeleteItemHandler.cpp  DeleteItemHandler.h  IdentifyHandler.cpp  ModifyItemHandler.cpp  ModifyItemHandler.h  RunHandler.cpp  RunHandler.h  clientconstants.h  main_client.cpp  websocketclient.cpp  websocketclient.h
src/gui/: CMakeLists.txt  CustomInfoWindow.h  DB_handler.cpp  DB_handler.h  LiveUpdate.cpp  LiveUpdate.h  LogReader.cpp  LogReader.h  PersistentTootip.h  SimulationControlPanel.cpp  SimulationRecorder.cpp  SimulationRecorder.h  SimulationReplayer.cpp  SimulationReplayer.h  box_info.json  buffer_test.cpp  buffer_test.h  customscene.cpp  customscene.h  customwidget.cpp  customwidget.h  editpanel.cpp  editpanel.h  initializeSensorsData.cpp  mainwindow.cpp  mainwindow.h  popupdialog.cpp  popupdialog.h  popupdialog.ui  remoteinterface.cpp  remoteinterface.h
src/items/: CMakeLists.txt  PersistentTootip.cpp  baseitem.cpp  baseitem.h  connectoritem.cpp  connectoritem.h  edgeitem.cpp  edgeitem.h  qemusensoritem.cpp  qemusensoritem.h  sensoritem.cpp  sensoritem.h  serializableitem.cpp  serializableitem.h
src/models/: CMakeLists.txt  projectmodel.h  qemusensormodel.cpp  qemusensormodel.h  sensormodel.cpp  sensormodel.h
src/server/: main_server.cpp  websocketserver.cpp  websocketserver.h
src/services/: CMakeLists.txt  runservice.cpp  runservice.h
src/state/: CMakeLists.txt  globalstate.cpp  globalstate.h
test/: BigNumWithMinus_test.cpp  BigNum_test.cpp  CMakeLists.txt  README.md  RSA_BigNum_test.cpp  RSA_test.cpp  aes_test.cpp
user_files/: CMakeLists.txt  client_main.cpp  runfiles.cpp
(+956 files in other folders)
